--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -140,6 +140,8 @@
      <Compile Include="Assets\Scripts\ScriptExamples\TimerBarController.cs" />
      <Compile Include="Assets\Scripts\SearchPlayerManager.cs" />
      <Compile Include="Assets\Scripts\SettingsController.cs" />
+     <Compile Include="Assets\Scripts\Space.cs" />
+     <Compile Include="Assets\Scripts\TicTacToeGameController.cs" />
      <Compile Include="Assets\Scripts\TimerBar.cs" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Mobile Overlay.shader" />
